Update private fees August 2023

--- a/privatefees.html
+++ b/privatefees.html
@@ -65,7 +65,7 @@
         </div>
       </div>
 	<div class="container main-container">
-		<h1 class="main-heading">Private Fees for Gerry Kaar and Associates. <span class="this-year">2014</span></h1>
+		<h1 class="main-heading">Private Fees for Dr Connor Slattery <span class="this-year">2014</span></h1>
 		<div class="container">
 			<div class="col-lg-11">
 				<h3>As a guide, the costs of some common private treatments are given below. You will be given a full
@@ -87,230 +87,110 @@
 				<br />
 			</div>
 		</div>
-		<div class="panel panel-primary">
-			<table class="table table-bordered table-striped table-hover" summary="Prices for dental treatments">
-			  <thead>
+		<div id="PrivateFees" class="panel panel-primary">
+            <table class="table table-bordered table-striped table-hover" summary="Prices for dental treatments">
+                <tbody>
+                <!-- ***** Examination + Hygienist ***** -->
 				<tr>
-					<th width="25%">Treatment Area</th>
-					<th width="50%">Specific treatment</th>
-					<th width="25%">Price</th>
-				</tr>
-			  <thead>
-			  <tbody>
-				<!-- ***** Hygienist ***** -->
-				<tr>
-					<td rowspan="3" valign="top">Hygienist <span class="asterisk">*</span> (Fees per visit)</td>
-					<td>Scale + Polish </td>
-					<td>&euro;50.00</td>
-				</tr>
-				<tr>
-					<td>Recall scale and polish per visit (if a second or more visit is required in the same course of treatment)</td>
-					<td>&euro;40.00</td>
-				</tr>
-				<tr>
-					<td>Root scaling</td>
+                    <td class="heading">Examination, Diagnosis and Treatment Plan</td>
 					<td>&euro;60.00</td>
 				</tr>
-				<!-- ***** Examination ***** -->
 				<tr>
-					<td rowspan="6" valign="top">Examination <span class="asterisk">**</span></td>
-					<td>EXAM with SCALE and POLISH</td>
+					<td class="heading">Prescription and Examination</td>
 					<td>&euro;80.00</td>
 				</tr>
 				<tr>
-					<td>Consultation/Examination</td>
-					<td>&euro;50.00 </td>
+                    <td class="heading">Dental Hygiene:</td>
+					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td>Consultation + Referral letter</td>
-					<td>&euro;60.00 </td>
+                    <td>Hygienist per visit</td>
+					<td>&euro;60.00</td>
 				</tr>
 				<tr>
-					<td>2 bitewing x-rays</td>
-					<td>&euro;30.00 </td>
+                    <td>Dentist per visit</td>
+					<td>&euro;60.00</td>
 				</tr>
-				<tr>
-					<td>Consultation with dressing</td>
-					<td>&euro;70.00 </td>
-				</tr>
-				<tr>
-					<td>Consultation with dressing and local anaesthesia</td>
-					<td>&euro;80.00 </td>
-				</tr>
-				<!-- ***** Extractions ***** -->
-				<tr>
-					<td rowspan="4" valign="top">Extractions</td>
-					<td>Extraction - as part of total treatment plan</td>
+				<tr class="divider">
+                    <td>Advanced Gum Treatment - per visit</td>
 					<td>&euro;80.00</td>
 				</tr>
-				<tr>
-					<td>Extraction - Emergency/new patient </td>
-					<td>&euro;100.00 </td>
-				</tr>
-				<tr>
-					<td>Surgical extraction in case of complicated extraction.</td>
-					<td>&euro;120.00 - &euro;150.00 (time based)</td>
-				</tr>
-				<tr>
-					<td>Surgical extraction of impacted tooth e.g. Wisdom tooth</td>
-					<td>&euro;230.00 </td>
-				</tr>
-				<!-- ***** Fillings ***** -->
-				<tr>
-					<td rowspan="6" valign="top">Fillings (the cost of the filling is determined by the number of tooth surfaces that need to be filled)</td>
-					<td>Amalgam - Simple </td>
-					<td>&euro;90.00</td>
-				</tr>
-				<tr>
-					<td>Amalgam - Complicated </td>
-					<td>up to &euro;120.00 </td>
-				</tr>
-				<tr>
-					<td>"White" Front filling </td>
-					<td>&euro;90.00 </td>
-				</tr>
-				<tr>
-					<td>Tip replacement/Cap </td>
-					<td>&euro;120.00 </td>
-				</tr>
-				<tr>
-					<td>"White" filling in a back tooth </td>
-					<td>&euro;90-120.00 </td>
-				</tr>
-				<tr>
-					<td>Add pin(s) to filling </td>
-					<td>Add &euro;20.00 </td>
-				</tr>
-				<!-- ***** Appliances ***** -->
-				<tr>
-					<td rowspan="2" valign="top">Appliances</td>
-					<td>Bite Guard </td>
-					<td>&euro;200.00</td>
-				</tr>
-				<tr>
-					<td>Gum shield /sports guard</td>
-					<td>&euro;80.00 </td>
-				</tr>
-				<!-- ***** RCT  ***** -->
-				<tr>
-					<td rowspan="2" valign="top">Root Canal Treatment</td>
-					<td>Per canal <span class="asterisk">***</span> </td>
-					<td>&euro;150.00</td>
-				</tr>
-				<tr>
-					<td>Apicectomy </td>
-					<td>&euro;200.00 </td>
-				</tr>
-				<!-- ***** Perio/Gum Surgery  ***** -->
-				<tr>
-					<td rowspan="2" valign="top">Perio/Gum Surgery</td>
-					<td>General gum therapy </td>
-					<td>Price on application</td>
-				</tr>
-				<tr>
-					<td>Crown lengthening for crown </td>
-					<td>Price on application </td>
-				</tr>
-				<!-- ***** Tooth Whitening ***** -->
-				<tr>
-					<td rowspan="1" valign="top">Tooth Whitening</td>
-					<td>Tray System</td>
-					<td>&euro;250.00</td>
-				</tr>
-				<!-- ***** Crown/Bridge ***** -->
-				<tr>
-					<td rowspan="11" valign="top">Crown and Bridge</td>
-					<td>Cap/Crown in "White" filling material </td>
-					<td>min &euro;150.00</td>
-				</tr>
-				<tr>
-					<td>Crown/Bridge tooth per tooth - Porcelain (requires external laboratory work)</td>
-					<td>&euro;700.00 </td>
-				</tr>
-				<tr>
-					<td>Crown/Bridge tooth per tooth - Porcelain bonded to metal (requires external laboratory work)</td>
-					<td>&euro;700.00 </td>
-				</tr>
-				<tr>
-					<td>Crown/Bridge tooth per tooth - Gold (requires external laboratory work)</td>
-					<td>&euro;650.00 </td>
-				</tr>
-				<tr>
-					<td>Gold Post for Crown </td>
-					<td>&euro;150.00 </td>
-				</tr>
-				<tr>
-					<td>Composite Post and Core (required to restore the tooth prior to filling or crowning)</td>
-					<td>&euro;150.00 </td>
-				</tr>
-				<tr>
-					<td>Porcelain Veneer (requires external laboratory work)</td>
-					<td>&euro;650.00 </td>
-				</tr>
-				<tr>
-					<td>Composite Veneer </td>
-					<td>&euro;150.00 </td>
-				</tr>
-				<tr>
-					<td>Onlay/Inlay - Porcelain (requires external laboratory work)</td>
-					<td>&euro;650.00 </td>
-				</tr>
-				<tr>
-					<td>Onlay/Inlay - Composite </td>
-					<td>&euro;350.00 </td>
-				</tr>
-				<tr>
-					<td>Temporary Bridge per Unit </td>
-					<td>&euro;80.00 </td>
-				</tr>
-				<!-- ***** Casualty ***** -->
-				<tr>
-					<td rowspan="9" valign="top">Casualty</td>
-					<td>EXTRACTION - Emergency/new patient </td>
-					<td>&euro;90.00 - &euro;120.00</td>
-				</tr>
-				<tr>
-					<td>Consultation with temporary Dressing/Filling with Local Anaesthetic </td>
-					<td>&euro;80.00 </td>
-				</tr>
-				<tr>
-					<td>Tip Replacement </td>
-					<td>&euro;120.00 </td>
-				</tr>
-				<tr>
-					<td>Temporary Tip Replacement </td>
-					<td>&euro;70.00 </td>
-				</tr>
-				<tr>
-					<td>Recement Crown/Bridge </td>
-					<td>&euro;60.00 </td>
-				</tr>
-				<tr>
-					<td>Recement Crown/Bridge that requires a new post </td>
-					<td>&euro;100.00 </td>
-				</tr>
-				<tr>
-					<td>Consultation with opening of the Root Canal and prescription </td>
-					<td>&euro;90.00 </td>
-				</tr>
-				<tr>
-					<td>Trauma Splint AE Composite </td>
-					<td>&euro;120.00 </td>
-				</tr>
-				<tr>
-					<td>Temporary Crown </td>
-					<td>&euro;90.00 </td>
-				</tr>
-			  <tbody>
-			</table>	  
+                <!-- ***** X-rays ***** -->
+                <tr>
+                    <td class="heading">X-rays:</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr class="divider">
+                    <td>Small</td>
+                    <td>&euro;20.00 per X-ray</td>
+                </tr>
+                <!-- ***** restoration ***** -->               
+                <tr>
+                    <td class="heading">Restoration Dependent on number of surfaces:</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td>"White" (composite resin)</td>
+                    <td>&euro;110.00 to &euro;150.00</td>
+                </tr>
+                <tr class="divider">
+                    <td>"Silver" (Amalgam)</td>
+                    <td>&euro;100.00 to &euro;120.00</td>
+                </tr>
+                <!-- ***** Extractions ***** -->
+                <tr>
+                    <td class="heading">Extractions:</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td>Routine Extraction</td>
+                    <td>&euro;90.00</td>
+                </tr>
+                <tr>
+                    <td>Surgical Extraction</td>
+                    <td>&euro;120.00 to &euro;200.00</td>
+                </tr>
+                <tr class="divider">
+                    <td>Emergency Extraction including Exam/Diagnosis</td>
+                    <td>&euro;110.00</td>
+                </tr>
+                <!-- ***** Root Canal ***** -->
+                <tr>
+                    <td class="heading">Root Canal Treatment (dependent on tooth type):</td>
+                    <td class="heading">Cost by number of canals in the tooth:</td>
+                </tr>
+                <tr>
+                    <td>Single root</td>
+                    <td>&euro;300.00</td>
+                </tr>
+                <tr>
+                    <td>Pre-molar</td>
+                    <td>&euro;350.00 to &euro;400.00</td>
+                </tr>
+                <tr class="divider">
+                    <td>Molar</td>
+                    <td>&euro;450.00 to &euro;500.00</td>
+                </tr>
+                <!-- ***** Crowns ***** -->
+                <tr>
+                    <td class="heading">Crowns:</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td>Core/Post Preparation</td>
+                    <td>&euro;150.00 to &euro;200.00</td>
+                </tr>
+                <tr class="divider">
+                    <td>Crown</td>
+                    <td>&euro;550.00 to &euro;700.00</td>
+                </tr>
+                </tbody>
+            </table>
 			<div class="panel-footer">
 			<p>Items not listed here can be quoted for individually.</p>
 				<p>We are registered with the VHI, VIVAS and Quinn health for listed procedures available under the outpatient scheme. Some procedures
 				require prior approval.</p>
 				<p>Tax relief is available on many items of treatment. Please ask for form MED 2 for processing by the Revenue Commissioners.</p>
-				<p><span class="asterisk">*</span> Hygienist - All fees inclusive of oral Hygiene instructions.</p>
-				<p><span class="asterisk">**</span> Hygienist (examination) - If scaling and polishing is requested the fee will be charged as per hygienist visit.</p>
-				<p><span class="asterisk">***</span> Root Canal Treatment (per canal) - There is an additional cost to restore the crown of the tooth. (&euro;100+)</p>
 		  </div>
 		</div>
 	</div>
