Add GDPR guidelines

--- a/findus.html
+++ b/findus.html
@@ -59,6 +59,7 @@
                 <li class="active"><a href="findus.html">How To Find Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="faq.html">F.A.Q.</a></li>
+                <li><a href="gdpr.html">GDPR Policy</a></li>
               </ul>
             </div>
           </div>
