Christmas 2023 profile update

--- a/about.html
+++ b/about.html
@@ -71,9 +71,12 @@
     <div class="container main-container">
         <h1 class="main-heading">About Us</h1><br />
         <div class="panel panel-primary">
-            <div class="panel-heading"><b>Gerry Kaar</b> Principal Dental Surgeon</div>
+            <div class="panel-heading"><b>Aditya Vikram</b> Principal Dental Surgeon</div>
             <div class="panel-body">
-                Retired on medical grounds.
+                <p>Aditya is an experienced and skilful dentist from India. He has worked in Ireland and the UK for over 15 years in Oral Surgery. He has completed his Membership of Faculty of Dentistry from Royal College of Surgeons in Ireland.</p>
+                <p>He enjoys general dental practice, but his main area of interest is in Oral Surgery and Dental Implants. His interest in surgery and dental implants led him to do courses in Switzerland and Germany for Implant Dentistry.</p>
+                <p>Dental Implants are a modern way to replace teeth which have been removed/lost for various reasons like decay, trauma, patients wearing dentures etc. The success rate of Dental Implants is 90&#37; over 25 to 30 years.</p>
+                <p>Aditya is continually involved in professional development by attending seminars and conferences. He is a calm and kind dentist with a good sense of humour. His hobbies involve hiking, surfing and travelling.</p>
             </div>
         </div>
         <div class="panel panel-default">
@@ -85,21 +88,6 @@
                     Having
                     recently relocated to Ireland, Connor is looking forward to the new work opportunities and
                     strengthening his family connections.</p>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading"><b>Dee. Kaar</b> Dental Hygienist and Practice Manager</div>
-            <div class="panel-body">
-                <p>Qualified as a dental surgery assistant in Cork University Dental Hospital.</p>
-                She then obtained her diploma in Dental Hygiene from the royal dental hospital in London, and worked as
-                a dental
-                hygienist in general practice in the UK.
-                Since then she has worked at the surgery in Clonmel with Gerry on a part-time basis, while at the same
-                time balancing
-                time at home raising her family.
-                She has also obtained a degree in Business Studies from Tipperary Institute, and has used this
-                experience
-                to help with the management of the practice.
             </div>
         </div>
         <div class="panel panel-default">
